--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
     "medusa-fulfillment-manual": "^1.1.38",
     "medusa-interfaces": "^1.3.7",
     "medusa-payment-manual": "^1.0.24",
-    "medusa-payment-stripe": "^6.0.4",
+    "medusa-payment-stripe-description": "^6",
+    "medusa-plugin-mailjet": "^0.0.2",
+    "medusa-plugin-sendgrid": "*",
     "prism-react-renderer": "^2.0.4",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
+    "@apollo/client": "^3.7.17",
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.21.4",
