--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.21.4",
     "@medusajs/medusa-cli": "^1.3.16",
+    "@prisma/client": "^5.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
