--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "medusa-fulfillment-manual": "^1.1.38",
     "medusa-interfaces": "^1.3.7",
     "medusa-payment-manual": "^1.0.24",
-    "medusa-payment-stripe-description": "^6",
+    "medusa-payment-stripe-description": "6.0.14",
     "medusa-plugin-mailjet": "^0.0.2",
     "medusa-plugin-sendgrid": "*",
     "prism-react-renderer": "^2.0.4",
